--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3cb29359-9f6c-451b-b68a-83db4b8c5b58"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
